--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "jwt-decode": "^2.2.0",
     "normalize.css": "^8.0.1",
     "react": "^16.7.0",
+    "react-burger-menu": "^2.6.4",
     "react-dom": "^16.7.0",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
     "redux": "^4.0.1",
+    "redux-burger-menu": "^0.2.8",
     "redux-form": "^8.1.0",
     "redux-thunk": "^2.3.0"
   },
