--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
+    "react-select": "^2.3.0",
     "redux": "^4.0.1",
     "redux-burger-menu": "^0.2.8",
     "redux-form": "^8.1.0",
