--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-burger-menu": "^2.6.4",
     "react-dom": "^16.7.0",
     "react-redux": "^6.0.0",
+    "react-responsive-select": "^4.6.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
     "react-select": "^2.3.0",
