--- a/package.json
+++ b/package.json
@@ -5,16 +5,16 @@
   "dependencies": {
     "jwt-decode": "^2.2.0",
     "normalize.css": "^8.0.1",
-    "react": "^16.7.0",
-    "react-burger-menu": "^2.6.4",
-    "react-dom": "^16.7.0",
-    "react-redux": "^6.0.0",
-    "react-responsive-select": "^4.6.0",
+    "react": "^16.8.6",
+    "react-burger-menu": "^2.6.9",
+    "react-dom": "^16.8.6",
+    "react-redux": "^6.0.1",
+    "react-responsive-select": "^4.6.3",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.3",
+    "react-scripts": "^2.1.8",
     "redux": "^4.0.1",
     "redux-burger-menu": "^0.2.8",
-    "redux-form": "^8.1.0",
+    "redux-form": "^8.2.0",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
@@ -33,7 +33,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "enzyme": "^3.8.0",
-    "enzyme-adapter-react-16": "^1.9.1"
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.12.1"
   }
 }
