Create ToggleSwitch component

--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "dependencies": {
     "jwt-decode": "^2.2.0",
     "normalize.css": "^8.0.1",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-burger-menu": "^2.6.9",
     "react-dom": "^16.8.6",
     "react-redux": "^6.0.1",
     "react-responsive-select": "^4.6.3",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "^2.1.8",
+    "react-scripts": "3.0.0",
     "redux": "^4.0.1",
     "redux-burger-menu": "^0.2.8",
     "redux-form": "^8.2.0",
